--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -16,8 +16,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
-
-
     <link href="../css/detailLab.css" rel="stylesheet">
 
 </head>
@@ -35,17 +33,17 @@
                     <li><a href="../index.html#services">Serviços</a></li>
                     <li><a href="../index.html#tiposteste">Testes</a></li>
                     <li><a href="../html/labs.html">Centros</a></li>
+                    <li><a href="../index.html#contacts">Contactos</a></li>
                 </ul>
-            </nav><!-- .nav-menu -->
+            </nav>
 
-            <a href="#loginModal" class="appointment-btn scrollto" data-toggle="modal" id="btnLogin">Login</a>
-
-            <a href="#registerModal" class="appointment-btn scrollto" data-toggle="modal" id="btnRegister">Registar</a>
-
+            <a href="#" class="appointment-btn scrollto" data-toggle="modal" id="btnLogin">Login</a>
+            <a href="#" class="appointment-btn scrollto" data-toggle="modal" id="btnRegister">Registar</a>
+            <div class="container1"></div>
             <a href="#" class="appointment-btn scrollto" style="visibility: hidden;" id="btnLogout">Logout</a>
 
         </div>
-    </header><!-- End Header -->
+    </header>
 
     <!-- Page Content -->
     <div class="container" id="contenct">
@@ -97,12 +95,11 @@
             <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn btn-primary">Marcar Teste</button>
         </div>
 
-
         <footer id="footer">
             <div class="container d-md-flex py-4">
               &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
             </div>
-        </footer><!-- End Footer -->
+        </footer>
         
         <div class="modal" id="confirm" tabindex="-1" role="dialog">
             <form id="frmConfirm">
@@ -123,12 +120,8 @@
                     </div>
                     <div id="confirmMessage" class="col-lg-12 d-flex justify-content-center"></div>
                 </div>
-            </form>
-            
+            </form>    
         </div>
-
-
-
         <script>
             $(document).ready(function () {
 
@@ -145,11 +138,7 @@
 
             });
         </script>
-
-        <!-- REFERÊNCIA AO APP.JS -->
         <script type="module" src="../js/app.js"></script>
-
-        <!-- REFERÊNCIA AO JS DO BOOTSTRAP E DEPENDÊNCIAS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
             crossorigin="anonymous"></script>
