--- a/projeto/html/labs.html
+++ b/projeto/html/labs.html
@@ -26,10 +26,12 @@
                     <li><a href="../index.html#services">Serviços</a></li>
                     <li><a href="../index.html#tiposteste">Testes</a></li>
                     <li><a href="../html/labs.html">Centros</a></li>
+                    <li><a href="../index.html#contacts">Contactos</a></li>
                 </ul>
             </nav>
-            <a href="#loginModal" class="appointment-btn scrollto" data-toggle="modal" id="btnLogin">Login</a>
-            <a href="#registerModal" class="appointment-btn scrollto" data-toggle="modal" id="btnRegister">Registar</a>
+            <a href="#" class="appointment-btn scrollto" data-toggle="modal" id="btnLogin">Login</a>
+            <a href="#" class="appointment-btn scrollto" data-toggle="modal" id="btnRegister">Registar</a>
+            <div class="container1"></div>
             <a href="#" class="appointment-btn scrollto" style="visibility: hidden;" id="btnLogout">Logout</a>
         </div>
     </header>    
