--- a/projeto/index.html
+++ b/projeto/index.html
@@ -114,7 +114,7 @@
       </div>
     </section><!-- End Why Us Section -->
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <!-- <section id="about" class="about">
       <div class="container-fluid">
         <div class="row">
           <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch">
@@ -140,7 +140,7 @@
         </div>
       </div>
       </div>
-    </section><!-- End About Section -->
+    </section>End About Section -->
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
       <div class="container">
