--- a/projeto/html/adminUser.html
+++ b/projeto/html/adminUser.html
@@ -36,7 +36,7 @@
               <a class="nav-link " aria-current="page" href="#">Gamificação</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#labs">Centros</a>
+              <a class="nav-link" aria-current="page" href="../html/adminCenter.html">Centros</a>
             </li>
           </ul>
           <a href="#" class="btn btn-primary ml-5" data-toggle="modal" id="btnLogin">Login</a>
@@ -63,7 +63,6 @@
     </table>
   </div>
   <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a>
-
 
 <!--MODAL editar-->
   <div class="modal fade" id="EditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -130,29 +129,6 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   <!--MODAL REGISTAR-->
   <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
