--- a/projeto/index.html
+++ b/projeto/index.html
@@ -33,7 +33,6 @@
       <nav class="nav-menu d-none d-lg-block align-items-center">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">Sobre</a></li>
           <li><a href="#services">Serviços</a></li>
           <li><a href="#tiposteste">Testes</a></li>
           <li><a href="./html/labs.html">Centros</a></li>
@@ -69,7 +68,7 @@
                 saúde, criando assim a melhor experiência para os nossos clientes.
               </p>
               <div class="text-center">
-                <a href="#about" class="more-btn">Saber mais<i class="bx bx-chevron-right"></i></a>
+                <a href="#faq" class="more-btn">Saber mais<i class="bx bx-chevron-right"></i></a>
               </div>
             </div>
           </div>
