--- a/projeto/html/profile.html
+++ b/projeto/html/profile.html
@@ -40,7 +40,6 @@
       <nav class="nav-menu d-none d-lg-block align-items-center">
         <ul>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="../index.html#about">Sobre</a></li>
           <li><a href="../index.html#services">Serviços</a></li>
           <li><a href="../index.html#tiposteste">Testes</a></li>
           <li><a href="../html/labs.html">Centros</a></li>
@@ -58,57 +57,57 @@
       <h5 class="modal-title d-flex justify-content-center " id="exampleModalLabel">Editar perfil</h5>
     </div>
     <div class="form-group d-flex justify-content-center">
-      <label for="">Username:</label>
-      <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_username_edit"
+      <label id="label" for="">Username:</label>
+      <input type="text" class="form-control col-6  modalField" id="txt_username_edit"
         aria-describedby="usernameHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
-      <label for="">Nome Completo:</label>
-      <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_fullname_edit"
+      <label id="label" for="">Nome Completo:</label>
+      <input type="text" class="form-control col-6 modalField" id="txt_fullname_edit"
         aria-describedby="fullnameHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
-      <label for="">E-mail:</label>
-      <input type="email" class="form-control col-lg-6 mt-2 modalField" id="txt_email_edit"
+      <label id="label" for="">E-mail:</label>
+      <input type="email" class="form-control col-6 modalField" id="txt_email_edit"
         aria-describedby="emailHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
-      <label for="">Morada:</label>
-      <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_address_edit"
+      <label id="label" for="">Morada:</label>
+      <input type="text" class="form-control col-6 modalField" id="txt_address_edit"
         aria-describedby="addressHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
-      <label for="">Telefone:</label>
-      <input type="tel" class="form-control col-lg-6 mt-2 modalField" id="txt_phone_eit"
+      <label id="label" for="">Telefone:</label>
+      <input type="tel" class="form-control col-6 modalField" id="txt_phone_eit"
         aria-describedby="phoneHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
-      <label for="">Genero:</label>
-      <select type="select" class="form-control col-lg-6 mt-2 mr-1 modalField" id="txt_gender_edit">
+      <label id="label" for="">Genero:</label>
+      <select type="select" class="form-control col-6 modalField" id="txt_gender_edit">
         <option value="" disabled selected>Escolha uma opção</option>
         <option value="male">Masculino</option>
         <option value="female">Feminino</option>
       </select>
     </div>
     <div class="form-group d-flex justify-content-center">
-      <label for="">Data de Nascimento:</label>
+      <label id="label" for="">Data de Nascimento:</label>
       <input type="date" name="bday" max="2021-06-20" min="1800-01-01"
-        class="form-control col-lg-6 mt-2 modalField" id="date_birthday_edit">
+        class="form-control col-6 modalField" id="date_birthday_edit">
     </div>
     <div class="form-group d-flex justify-content-center">
-      <label for="">Password:</label>
-      <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField" id="txt_password_edit"
+      <label id="label" for="">Password:</label>
+      <input type="password" class="form-control col-3 modalField" id="txt_password_edit"
         aria-describedby="weightHelp">
-        <label for="">Confirmar Password:</label>
-      <input type="password" class="form-control col-lg-3 mt-3 mr-1 modalField"
+        <label id="labelconfirm" for="">Confirmar Password:</label>
+      <input type="password" class="form-control col-3 modalField"
         id="txt_confirmPassword_register" aria-describedby="pwconfimHelp" placeholder="Confirm">
     </div>
     <div class="d-flex justify-content-center mb-3">
-      <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3 "
+      <button type="button" id="cancelar" class="btn btn-secondary navButton col-3 "
         data-dismiss="modal">Cancelar</button>
-      <button type="submit" class="btn btn-primary navButton col-lg-3">Editar</button>
+      <button type="submit" id="editarbtn" class="btn btn-primary navButton col-3">Editar</button>
     </div>
-    <div id="registerMessage" class="col-lg-12 d-flex justify-content-center"></div>
+    <div id="registerMessage" class="col-12 d-flex justify-content-center"></div>
   </form>  
   <footer id="footer">
     <div class="container d-md-flex py-4">
