--- a/projeto/html/adminUser.html
+++ b/projeto/html/adminUser.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../html/adminUser.html">Utlizadores</a>
+              <!-- <a class="nav-link" aria-current="page" href="../html/adminUser.html">Utlizadores</a> -->
             </li>
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#">Gamificação</a>
+              <!-- <a class="nav-link " aria-current="page" href="#">Gamificação</a> -->
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../html/adminCenter.html">Centros</a>
+              <!-- <a class="nav-link" aria-current="page" href="../html/adminCenter.html">Centros</a> -->
             </li>
           </ul>
           <a href="#" class="btn btn-primary ml-5" data-toggle="modal" id="btnLogin">Login</a>
@@ -63,6 +63,24 @@
     </table>
   </div>
   <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a>
+
+
+  <!-- <table id="tabelaUser" class="consult">
+    <th>Name</th>
+    <th>Description</th>
+    <th>Photo</th>
+    <th>Phone</th>
+    <th>Longitude</th>
+    <th>Latitude</th>
+    <th>Type</th>
+    <th>Schedule</th>
+    <th>Price</th>
+    <th>Comments</th>
+    <th>Likes</th>
+    <th>Morada</th>
+  </table>
+</div>
+<a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a> -->
 
 <!--MODAL editar-->
   <div class="modal fade" id="EditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
