--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -94,6 +94,12 @@
             <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn btn-primary">Marcar Teste</button>
         </div>
 
+        <section id="comments">
+            <p>
+                inserir comentarios aqui
+            </p>
+        </section>
+
         <footer id="footer">
             <div class="container d-md-flex py-4">
               &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
