--- a/projeto/html/profile.html
+++ b/projeto/html/profile.html
@@ -46,8 +46,9 @@
           <li><a href="/index.html#contacts">Contactos</a></li>
         </ul>
       </nav>
-      <a href="#loginModal" class="btn btn-primary ml-5" data-toggle="modal" id="btnLogin">Login</a>
-      <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a>
+      <a href="#" class="appointment-btn scrollto" data-toggle="modal" id="btnLogin">Login</a>
+      <a href="#" class="appointment-btn scrollto" data-toggle="modal" id="btnRegister">Registar</a>
+      <div class="container1"></div>
       <a href="#" class="appointment-btn scrollto" style="visibility: hidden;" id="btnLogout">Logout</a>
     </div>
   </header>
@@ -108,7 +109,12 @@
       <button type="submit" id="editarbtn" class="btn btn-primary navButton col-3">Editar</button>
     </div>
     <div id="registerMessage" class="col-12 d-flex justify-content-center"></div>
-  </form>  
+  </form>
+  
+  <!-- leadrboard -->
+
+
+
   <footer id="footer">
     <div class="container d-md-flex py-4">
       <div class="text-center">
