--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -79,11 +79,81 @@
                         <form autocomplete="off">
                             <div class="card-header">
                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1"> 
-                                    <input type="date" name="bday" max="2021-12-31" min=getCurrentDate()
-                                        class="datepicker" id="dataTeste"></span> </div>
+                                    <input type="date" name="bday"  
+                                        class="datepicker" id="dataTeste"  ></span> </div>
                             </div>
                             <div class="card-body p-3 p-sm-5">
-                                <p id="schedule"></p>
+                                <div class="row text-center mx-0">
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">9:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">9:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">9:45</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">10:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">10:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">10:45</div>
+                                    </div>
+                                </div>
+                                <div class="row text-center mx-0">
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">11:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">11:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">11:45</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">14:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">14:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">14:45</div>
+                                    </div>
+                                </div>
+                                <div class="row text-center mx-0">
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">15:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">15:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">15:45</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">16:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">16:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">16:45</div>
+                                    </div>
+                                </div>
+                                <div class="row text-center mx-0">
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">17:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">17:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1">17:45</div>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
