--- a/projeto/html/adminUser.html
+++ b/projeto/html/adminUser.html
@@ -46,6 +46,7 @@
         </div>
       </nav>
     </div>
+    <h4>Users</h4>
     <table id="tabelaUser" class="consult">
       <th>Username</th>
       <th>Password</th>
@@ -64,8 +65,11 @@
   </div>
   <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a>
 
+  <br><br><br><br>
 
-  <!-- <table id="tabelaUser" class="consult">
+  <h4>Centros</h4>
+
+  <table id="tabelaCentros" class="consult">
     <th>Name</th>
     <th>Description</th>
     <th>Photo</th>
@@ -78,11 +82,168 @@
     <th>Comments</th>
     <th>Likes</th>
     <th>Morada</th>
+    <th>Actions</th>
   </table>
 </div>
-<a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a> -->
+<!-- <a href="#registerModal" class="btn btn-primary ml-3" data-toggle="modal" id="btnRegister">Registar</a> -->
 
-<!--MODAL editar-->
+
+
+
+
+
+
+
+
+
+<!--MODAL EDITAR CENTROS-->
+<div class="modal fade" id="EditModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <div class="d-flex justify-content-center col-lg-11">
+      </div>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form id="frmEdit">
+        <div class="form-group d-flex justify-content-center">
+          <h5 class="modal-title d-flex justify-content-center" id="exampleModalLabel">Editar</h5>
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input disabled type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_name_edit_center"
+            aria-describedby="usernameHelp" placeholder="Nome do Centro">
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_description_edit_center"
+            aria-describedby="fullnameHelp" placeholder="Descrição">
+        </div>
+        <!-- photo -->
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_lon_edit_center"
+            aria-describedby="lonHelp" placeholder="Longitude">
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_lat_edit_center"
+            aria-describedby="latHelp" placeholder="Latitude">
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <select type="select" class="form-control col-lg-6 mt-2 mr-1 modalField" id="txt_type_edit_center">
+            <option value="" disabled selected>Escolha uma opção</option>
+            <option value="antigénio">Antigénio</option>
+            <option value="serológicos">Serológicos</option>
+            <option value="diagnostico">Diagnóstico</option>
+          </select>
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_schedule_edit_center"
+            aria-describedby="scheduleHelp" placeholder="Horario">
+        </div>    
+        <div class="form-group d-flex justify-content-center">
+          <input type="number" class="form-control col-lg-6 mt-2 modalField" id="txt_price_edit_center"
+            aria-describedby="scheduleHelp" placeholder="Horario">
+        </div>    
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_schedule_edit_center"
+            aria-describedby="scheduleHelp" placeholder="Horario">    
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_address_edit_center"
+            aria-describedby="addressHelp" placeholder="Morada">
+        </div>
+        <div class="d-flex justify-content-center mb-3">
+          <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3 "
+            data-dismiss="modal">Cancelar</button>
+          <button type="submit" class="btn btn-primary navButton col-lg-3" id="submitModal">Editar</button>
+        </div>
+        <div id="registerMessage" class="col-lg-12 d-flex justify-content-center"></div>
+      </form>
+    </div>
+  </div>
+</div>
+</div>
+
+<!--MODAL REGISTAR CENTER-->
+<div class="modal fade" id="registerModalcenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <div class="d-flex justify-content-center col-lg-11">
+      </div>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form id="frmRegister">
+        <div class="form-group d-flex justify-content-center">
+          <h5 class="modal-title d-flex justify-content-center" id="exampleModalLabel">Registo</h5>
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input disabled type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_name_register_center"
+            aria-describedby="usernameHelp" placeholder="Nome do Centro">
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_description_register_center"
+            aria-describedby="fullnameHelp" placeholder="Descrição">
+        </div>
+        <!-- photo -->
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_lon_register_center"
+            aria-describedby="lonHelp" placeholder="Longitude">
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_lat_register_center"
+            aria-describedby="latHelp" placeholder="Latitude">
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <select type="select" class="form-control col-lg-6 mt-2 mr-1 modalField" id="txt_type_register_center">
+            <option value="" disabled selected>Escolha uma opção</option>
+            <option value="antigénio">Antigénio</option>
+            <option value="serológicos">Serológicos</option>
+            <option value="diagnostico">Diagnóstico</option>
+          </select>
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_schedule_register_center"
+            aria-describedby="scheduleHelp" placeholder="Horario">
+        </div>    
+        <div class="form-group d-flex justify-content-center">
+          <input type="number" class="form-control col-lg-6 mt-2 modalField" id="txt_price_register_center"
+            aria-describedby="scheduleHelp" placeholder="Horario">
+        </div>    
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_schedule_register_center"
+            aria-describedby="scheduleHelp" placeholder="Horario">    
+        </div>
+        <div class="form-group d-flex justify-content-center">
+          <input type="text" class="form-control col-lg-6 mt-2 modalField" id="txt_address_register_center"
+            aria-describedby="addressHelp" placeholder="Morada">
+        </div>
+        <div class="d-flex justify-content-center mb-3">
+          <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3 "
+            data-dismiss="modal">Cancelar</button>
+          <button type="submit" class="btn btn-primary navButton col-lg-3">Registar</button>
+        </div>
+        <div id="registerMessage" class="col-lg-12 d-flex justify-content-center"></div>
+      </form>
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+<!--MODAL EDITAR USER-->
   <div class="modal fade" id="EditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -139,7 +300,7 @@
             <div class="d-flex justify-content-center mb-3">
               <button type="button" class="btn btn-secondary navButton mr-1 col-lg-3 "
                 data-dismiss="modal">Cancelar</button>
-              <button type="submit" class="btn btn-primary navButton col-lg-3" id="submitModal  ">Editar</button>
+              <button type="submit" class="btn btn-primary navButton col-lg-3" id="submitModal">Editar</button>
             </div>
             <div id="registerMessage" class="col-lg-12 d-flex justify-content-center"></div>
           </form>
@@ -148,7 +309,7 @@
     </div>
   </div>
 
-  <!--MODAL REGISTAR-->
+  <!--MODAL REGISTAR USER-->
   <div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
