--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -80,78 +80,79 @@
                             <div class="card-header">
                                 <div class="mx-0 mb-0 row justify-content-sm-center justify-content-start px-1"> 
                                     <input type="date" name="bday"  
-                                        class="datepicker" id="dataTeste"  ></span> </div>
+                                        class="datepicker" id="dataTeste" min="">
+                                </div>
                             </div>
                             <div class="card-body p-3 p-sm-5">
                                 <div class="row text-center mx-0">
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">9:00</div>
+                                        <div class="cell py-1" id="a0900">9:00</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">9:30</div>
+                                        <div class="cell py-1" id="a0930">9:30</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">9:45</div>
+                                        <div class="cell py-1" id="a0945">9:45</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">10:00</div>
+                                        <div class="cell py-1" id="a1000">10:00</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">10:30</div>
+                                        <div class="cell py-1" id="a1030">10:30</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">10:45</div>
-                                    </div>
-                                </div>
-                                <div class="row text-center mx-0">
-                                    <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">11:00</div>
-                                    </div>
-                                    <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">11:30</div>
-                                    </div>
-                                    <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">11:45</div>
-                                    </div>
-                                    <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">14:00</div>
-                                    </div>
-                                    <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">14:30</div>
-                                    </div>
-                                    <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">14:45</div>
+                                        <div class="cell py-1" id="a1045">10:45</div>
                                     </div>
                                 </div>
                                 <div class="row text-center mx-0">
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">15:00</div>
+                                        <div class="cell py-1" id="a1100">11:00</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">15:30</div>
+                                        <div class="cell py-1" id="a1130">11:30</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">15:45</div>
+                                        <div class="cell py-1" id="a1145">11:45</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">16:00</div>
+                                        <div class="cell py-1" id="a1400">14:00</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">16:30</div>
+                                        <div class="cell py-1" id=a1430>14:30</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">16:45</div>
+                                        <div class="cell py-1" id="a1445">14:45</div>
                                     </div>
                                 </div>
                                 <div class="row text-center mx-0">
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">17:00</div>
+                                        <div class="cell py-1" id="a1500">15:00</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">17:30</div>
+                                        <div class="cell py-1" id="a1530">15:30</div>
                                     </div>
                                     <div class="col-md-2 col-4 my-1 px-2">
-                                        <div class="cell py-1">17:45</div>
+                                        <div class="cell py-1" id="a1545">15:45</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1" id="a1600">16:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1" id="a1630">16:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1" id="a1645">16:45</div>
+                                    </div>
+                                </div>
+                                <div class="row text-center mx-0">
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1" id="a1700">17:00</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1" id="a1730">17:30</div>
+                                    </div>
+                                    <div class="col-md-2 col-4 my-1 px-2">
+                                        <div class="cell py-1" id="a1745">17:45</div>
                                     </div>
                                 </div>
                             </div>
@@ -164,11 +165,11 @@
             <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn btn-primary">Marcar Teste</button>
         </div>
 
-        <section id="comments">
+        <!-- <section id="comments">
             <p>
                 inserir comentarios aqui
             </p>
-        </section>
+        </section> -->
 
         <footer id="footer">
             <div class="container d-md-flex py-4">
