--- a/projeto/html/profile.html
+++ b/projeto/html/profile.html
@@ -18,7 +18,7 @@
 
   <link href="..\css\index.css" rel="stylesheet">
   <link href="..\css\perfil.css" rel="stylesheet">
-  
+
 
 </head>
 
@@ -59,28 +59,23 @@
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Username:</label>
-      <input type="text" class="form-control col-3  modalField" id="txt_username_edit"
-        aria-describedby="usernameHelp">
+      <input type="text" class="form-control col-3  modalField" id="txt_username_edit" aria-describedby="usernameHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Nome Completo:</label>
-      <input type="text" class="form-control col-3 modalField" id="txt_fullname_edit"
-        aria-describedby="fullnameHelp">
+      <input type="text" class="form-control col-3 modalField" id="txt_fullname_edit" aria-describedby="fullnameHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">E-mail:</label>
-      <input type="email" class="form-control col-3 modalField" id="txt_email_edit"
-        aria-describedby="emailHelp">
+      <input type="email" class="form-control col-3 modalField" id="txt_email_edit" aria-describedby="emailHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Morada:</label>
-      <input type="text" class="form-control col-3 modalField" id="txt_address_edit"
-        aria-describedby="addressHelp">
+      <input type="text" class="form-control col-3 modalField" id="txt_address_edit" aria-describedby="addressHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Telefone:</label>
-      <input type="tel" class="form-control col-3 modalField" id="txt_phone_eit"
-        aria-describedby="phoneHelp">
+      <input type="tel" class="form-control col-3 modalField" id="txt_phone_edit" aria-describedby="phoneHelp">
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Genero:</label>
@@ -92,18 +87,17 @@
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Data de Nascimento:</label>
-      <input type="date" name="bday" max="2021-06-20" min="1800-01-01"
-        class="form-control col-3 modalField" id="date_birthday_edit">
+      <input type="date" name="bday" max="2021-06-20" min="1800-01-01" class="form-control col-3 modalField"
+        id="date_birthday_edit">
     </div>
     <div class="form-group d-flex justify-content-center">
       <label id="label" for="" class="col-sm-2 col-form-label">Password:</label>
-      <input type="password" class="form-control col-3 modalField" id="txt_password_edit"
-        aria-describedby="weightHelp">
+      <input type="password" class="form-control col-3 modalField" id="txt_password_edit" aria-describedby="weightHelp">
     </div>
-    <div class="form-group d-flex justify-content-center">    
-        <label id="labelconfirm" for="" class="col-sm-2 col-form-label">Confirmar Password:</label>
-      <input type="password" class="form-control col-3 modalField"
-        id="txt_confirmPassword_register" aria-describedby="pwconfimHelp" placeholder="Confirm">
+    <div class="form-group d-flex justify-content-center">
+      <label id="labelconfirm"  class="col-sm-2 col-form-label">Confirmar Password:</label>
+      <input type="password" class="form-control col-3 modalField" id="txt_confirmPassword_register"
+        aria-describedby="pwconfimHelp" placeholder="Confirm">
     </div>
     <div class="d-flex justify-content-center mb-3">
       <button type="button" id="cancelar" class="btn btn-secondary navButton col-3 "
@@ -112,10 +106,19 @@
     </div>
     <div id="registerMessage" class="col-12 d-flex justify-content-center"></div>
   </form>
-  
+
   <!-- leadrboard -->
 
-
+  <h4>LeaderBoard</h4>
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Points</th>
+    </tr>
+    <tr id="a0"></tr>
+    <tr id="a1"></tr>
+    <tr id="a2"></tr>
+  </table>
 
   <footer id="footer">
     <div class="container d-md-flex py-4">
