--- a/projeto/html/detailLab.html
+++ b/projeto/html/detailLab.html
@@ -36,16 +36,16 @@
                 </ul>
             </nav>
 
-            <a href="#" class="appointment-btn scrollto" data-toggle="modal" id="btnLogin">Login</a>
-            <a href="#" class="appointment-btn scrollto" data-toggle="modal" id="btnRegister">Registar</a>
+            <a href="#" class="btn btn-primary" data-toggle="modal" id="btnLogin">Login</a>
+            <a href="#" class="btn btn-primary" data-toggle="modal" id="btnRegister">Registar</a>
             <div class="container1"></div>
-            <a href="#" class="appointment-btn scrollto" style="visibility: hidden;" id="btnLogout">Logout</a>
+            <a href="#" class="btn btn-primary" style="visibility: hidden;" id="btnLogout">Logout</a>
 
         </div>
     </header>
 
     <!-- Page Content -->
-    <div class="container-fluid" id="contenct">
+    <div class="container" id="contenct">
 
         <!-- Portfolio Item Heading -->
         <h1 class="my" id="labName"></h1>
@@ -161,20 +161,21 @@
                 </div>
             </div>
         </div>
+        <br>
         <div>
             <button id="btnMarcar" href="#confirm" type="button" data-toggle="modal" class="btn btn-primary">Marcar Teste</button>
         </div>
-
+        <br>
         <!-- <section id="comments">
             <p>
                 inserir comentarios aqui
             </p>
         </section> -->
-        <footer id="footer">
+        <!-- <footer id="footer">
             <div class="container d-md-flex py-4">
               &copy; Copyright <strong><span>Covid Test Booking</span></strong>. All Rights Reserved
             </div>
-        </footer>
+        </footer> -->
     </div>
     
     <div class="modal" id="confirm" tabindex="-1" role="dialog">
