--- a/projeto/html/profile.html
+++ b/projeto/html/profile.html
@@ -109,7 +109,7 @@
 
   <!-- leadrboard -->
 
-  <h4>LeaderBoard</h4>
+  <!-- <h4>LeaderBoard</h4>
   <table>
     <tr>
       <th>Name</th>
@@ -118,7 +118,24 @@
     <tr id="a0"></tr>
     <tr id="a1"></tr>
     <tr id="a2"></tr>
-  </table>
+  </table> -->
+  <p class="leaderBoardTitle d-flex justify-content-center">LeaderBoard</p>
+  <div class="d-flex justify-content-center">
+    <div class="col-7">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th class="tableName" scope="col">Nome</th>
+              <th class="tableName" scope="col">Pontos</th>
+            </tr>
+          </thead>
+            <tr id="a0"></tr>
+            <tr id="a1"></tr>
+            <tr id="a2"></tr>
+        </table>
+    </div>
+  </div>
+
 
   <footer id="footer">
     <div class="container d-md-flex py-4">
